test-generator/tests/snapshots/tsx/test_generated_array_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const [a, b] = array;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (array_pattern
        (identifier "a")
        (identifier "b")
      )
      value: (identifier "array")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "a",
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "b",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 12,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "array",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 16,
                end_line: 1,
                end_column: 21,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
