test-generator/tests/snapshots/tsx/test_generated_class_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
class TestClass1 { private field: number = 42; public method1(): number { return this.field; } }

AST:
(program
  (class_declaration
    name: (type_identifier "TestClass1")
    body: (class_body
      (public_field_definition
        (accessibility_modifier "private")
        name: (property_identifier "field")
        type: (type_annotation
          (predefined_type "number")
        )
        value: (number "42")
      )
      (method_definition
        (accessibility_modifier "public")
        name: (property_identifier "method1")
        parameters: (formal_parameters)
        return_type: (type_annotation
          (predefined_type "number")
        )
        body: (statement_block
          (return_statement
            (member_expression
              object: (this "this")
              property: (property_identifier "field")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "TestClass1",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 17,
            },
            definition_type: ClassDefinition,
        },
        Definition {
            name: "field",
            position: Position {
                start_line: 1,
                start_column: 28,
                end_line: 1,
                end_column: 33,
            },
            definition_type: PropertyDefinition,
        },
        Definition {
            name: "method1",
            position: Position {
                start_line: 1,
                start_column: 55,
                end_line: 1,
                end_column: 62,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "field",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 28,
                end_line: 1,
                end_column: 33,
            },
        },
        Usage {
            name: "method1",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 55,
                end_line: 1,
                end_column: 62,
            },
        },
        Usage {
            name: "field",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 87,
                end_line: 1,
                end_column: 92,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
