test-generator/tests/snapshots/tsx/test_generated_default_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
type Test<T1 = string> = T1; const value6: Test = 'default';

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Test")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T1")
        value: (default_type
          (predefined_type "string")
        )
      )
    )
    value: (type_identifier "T1")
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value6")
      type: (type_annotation
        (type_identifier "Test")
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Test",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 10,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "T1",
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 13,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "value6",
            position: Position {
                start_line: 1,
                start_column: 36,
                end_line: 1,
                end_column: 42,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "T1",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 26,
                end_line: 1,
                end_column: 28,
            },
        },
        Usage {
            name: "Test",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 44,
                end_line: 1,
                end_column: 48,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
