test-generator/tests/snapshots/tsx/test_generated_function_declaration.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
function testFn1(param: number): number { const local = param; return local + 1; }

AST:
(program
  (function_declaration
    name: (identifier "testFn1")
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier "param")
        type: (type_annotation
          (predefined_type "number")
        )
      )
    )
    return_type: (type_annotation
      (predefined_type "number")
    )
    body: (statement_block
      (lexical_declaration
        (variable_declarator
          name: (identifier "local")
          value: (identifier "param")
        )
      )
      (return_statement
        (binary_expression
          left: (identifier "local")
          right: (number "1")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "testFn1",
            position: Position {
                start_line: 1,
                start_column: 10,
                end_line: 1,
                end_column: 17,
            },
            definition_type: FunctionDefinition,
        },
        Definition {
            name: "param",
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 23,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "local",
            position: Position {
                start_line: 1,
                start_column: 49,
                end_line: 1,
                end_column: 54,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "param",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 57,
                end_line: 1,
                end_column: 62,
            },
        },
        Usage {
            name: "local",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 71,
                end_line: 1,
                end_column: 76,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
