test-generator/tests/snapshots/tsx/test_generated_function_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const fn: (x: number) => string = (x) => x.toString();

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "fn")
      type: (type_annotation
        (function_type
          parameters: (formal_parameters
            (required_parameter
              pattern: (identifier "x")
              type: (type_annotation
                (predefined_type "number")
              )
            )
          )
          return_type: (predefined_type "string")
        )
      )
      value: (arrow_function
        parameters: (formal_parameters
          (required_parameter
            pattern: (identifier "x")
          )
        )
        body: (call_expression
          function: (member_expression
            object: (identifier "x")
            property: (property_identifier "toString")
          )
          arguments: (arguments)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "fn",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "x",
            position: Position {
                start_line: 1,
                start_column: 36,
                end_line: 1,
                end_column: 37,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x.toString()",
            kind: CallExpression,
            position: Position {
                start_line: 1,
                start_column: 42,
                end_line: 1,
                end_column: 54,
            },
        },
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 42,
                end_line: 1,
                end_column: 43,
            },
        },
        Usage {
            name: "toString",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 44,
                end_line: 1,
                end_column: 52,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
