test-generator/tests/snapshots/tsx/test_generated_jsx_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <div>{value14}</div>;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "element")
      value: (jsx_element
        open_tag: (jsx_opening_element
          name: (identifier "div")
        )
        (jsx_expression
          (identifier "value14")
        )
        close_tag: (jsx_closing_element
          name: (identifier "div")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "div",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 21,
            },
        },
        Usage {
            name: "value14",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 30,
            },
        },
        Usage {
            name: "div",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 33,
                end_line: 1,
                end_column: 36,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
